--- a/src/index.css
+++ b/src/index.css
@@ -22,8 +22,8 @@
     390deg,
     #050505 0%,
     #0f0f0f 40%,
-    #221f17 70%,
-    #2a2619 100%
+    #16140f 70%,
+    #13120d 100%
   );
   /* Плавный переход фона:
      сверху почти чёрный →
