--- a/src/pages/auth/Auth.scss
+++ b/src/pages/auth/Auth.scss
@@ -8,8 +8,8 @@
 
   flex: 1; // Контейнер занимает всё доступное пространство между Navbar и Footer
   overflow-y: auto; // Добавляет вертикальный скролл, если контента больше, чем высота контейнера
-  padding-top: 110px; // Отступ сверху, чтобы не перекрывать Navbar
-  padding-bottom: 70px; // Отступ снизу, чтобы не перекрывать Footer
+  padding-top: 50px; // Отступ сверху, чтобы не перекрывать Navbar
+  padding-bottom: 80px; // Отступ снизу, чтобы не перекрывать Footer
   position: relative; // Позволяет использовать псевдоэлемент ::before для фонового слоя
 
   &::before {
@@ -37,7 +37,7 @@
     z-index: 1; // Заголовок выше фонового псевдоэлемента
     color: #ece194; // Цвет текста
     font-family: monospace; // Моноширинный шрифт
-    font-size: 25px; // Размер текста
+    font-size: 22px; // Размер текста
     font-weight: 500; // Толщина шрифта
     text-align: center; // Выравнивание по центру
 
@@ -67,7 +67,7 @@
   z-index: 1; // Над фоном
   max-width: 500px; // Максимальная ширина формы
   width: 90%; // Адаптивная ширина до 90% от контейнера
-  padding: 25px; // Внутренний отступ
+  padding: 22px; // Внутренний отступ
   border-radius: 25px; // Скругление углов
   background: rgba(25, 25, 25, 0.85); // Полупрозрачный темный фон
   color: #fbe8a6; // Цвет текста внутри формы
@@ -83,7 +83,7 @@
     display: flex; // Flex-контейнер для переключателя
     border-radius: 16px; // Скругленные углы
     overflow: hidden; // Скрываем выступающие части
-    margin-bottom: 20px; // Отступ снизу
+    margin-bottom: 18px; // Отступ снизу
     cursor: pointer; // Курсор в виде руки
 
     .segment {
@@ -91,15 +91,16 @@
       text-align: center; // Текст по центру
       padding: 10px 0; // Вертикальный отступ
       font-weight: 600; // Полужирный текст
+      font-size: 16px;
       background: rgba(40, 35, 30, 0.6); // Темный фон
       color: #fbe8a6; // Цвет текста
       transition: all 0.3s ease; // Плавные изменения
 
       &.active {
         background: linear-gradient(
-          145deg,
-          #fdebb2,
-          #f4d27b
+          155deg,
+          #90804c,
+          #b38a22
         ); // Градиент для активного сегмента
         color: #1c1c1c; // Цвет текста активного сегмента
         box-shadow: inset 0 0 6px rgba(212, 175, 55, 0.35); // Внутренняя тень
@@ -175,6 +176,7 @@
       border-radius: 16px; // Скругление углов
       padding: 10px; // Внутренний отступ
       font-weight: 600; // Полужирный текст
+      font-size: 16px;
       cursor: pointer; // Курсор в виде руки
       transition: all 0.25s ease; // Плавное изменение при ховере
 
