--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -1,34 +1,25 @@
 .Home {
-  // Основной контейнер страницы Home
-
-  padding: 12px 0;
-  // Вертикальные отступы сверху и снизу
-
   display: flex;
   // Используем flexbox
 
   flex-direction: column;
   // Располагаем элементы по вертикали
-
   align-items: center;
   // Центрируем элементы по горизонтали
 
   font-family: monospace;
   // Моноширинный шрифт
 
-  color: #fbe8a6;
-  // Основной цвет текста
-
   &_title {
     // Заголовок страницы
 
-    margin-bottom: 8px;
+    margin-bottom: 16px;
     // Отступ снизу
 
-    font-size: 1.6rem;
+    font-size: 1.2rem;
     // Размер шрифта
 
-    color: #eae7df;
+    color: #d8d3b0;
     // Цвет заголовка
 
     text-shadow: 0 0 5px rgba(212, 175, 55, 0.6);
@@ -36,13 +27,20 @@
 
     text-align: center;
     // Центрирование текста
+    opacity: 0;
+    // Изначально текст невидим
+
+    animation: fadeSlideUp 1.2s ease forwards;
+    // Анимация появления
+
+    animation-delay: 0.3s;
   }
 
   /* 🌿 текст под заголовком */
   &_subtext {
     // Подзаголовок / описание под title
-
-    max-width: 620px;
+    padding: 16px;
+    max-width: 720px;
     // Максимальная ширина текста
 
     text-align: center;
@@ -56,9 +54,6 @@
 
     color: #d8d3b0;
     // Мягкий светлый цвет текста
-
-    margin-top: 8px;
-    // Отступ сверху
 
     opacity: 0;
     // Изначально текст невидим
@@ -79,7 +74,7 @@
     width: 100%;
     // На всю доступную ширину
 
-    max-width: 620px;
+    max-width: 700px;
     // Максимальная ширина слайдера
 
     height: 400px;
