--- a/src/pages/contact/Contact.scss
+++ b/src/pages/contact/Contact.scss
@@ -7,6 +7,14 @@
   flex-direction: column; // Контейнеры располагаются сверху вниз
   gap: 16px; // Расстояние между контейнерами
   z-index: 100; // На переднем плане поверх остальных элементов
+  &_a_tg {
+    color: #d4af37;
+    padding-left: 8px;
+  }
+  &_a_gmail {
+    color: #d4af37;
+    padding-left: 8px;
+  }
 }
 
 /* Общие стили для обоих контейнеров */
