--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -9,6 +9,7 @@
 
   font-family: monospace;
   // Моноширинный шрифт
+  margin-top: 100px;
 
   &_title {
     // Заголовок страницы
@@ -77,7 +78,7 @@
     max-width: 700px;
     // Максимальная ширина слайдера
 
-    height: 400px;
+    height: 420px;
     // Фиксированная высота
   }
 
